@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-09-23T16:24:05Z",
-  "count_outdated" : 531,
-  "uniques_outdated" : 307,
-  "count" : 565,
+  "timestamp" : "2022-09-24T01:48:12Z",
+  "count_outdated" : 534,
+  "uniques_outdated" : 308,
+  "count" : 568,
   "uniques" : 326,
   "clones" : [
-    {
-      "timestamp": "2022-09-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 3 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-09-10T00:00:00Z",
       "count": 3,
@@ -105,8 +98,8 @@
     },
     {
       "timestamp": "2022-09-23T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
